--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -59,6 +59,9 @@
   --color-btn-bg-active: var(--color-scale-a-6-100);
   --color-btn-bg-disabled: var(--color-scale-a-7-50);
 
+  --color-btn-bg-green: var(--color-scale-g-6-100);
+  --color-btn-bg-green-hover: var(--color-scale-g-5-100);
+
   --color-context-bg: var(--color-scale-a-7-100);
   --color-context-bg-hover: var(--color-scale-a-6-100);
   --color-context-border: var(--color-scale-a-6-100);
