--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -34,7 +34,7 @@
   }
 
   &__change-start {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
     padding: 0.5rem 2.5rem;
 
     .btn {
@@ -160,39 +160,21 @@
       }
     }
   
-    &--LineConflictStart {
+    &--DiffChangeStartLine {
       > div {
         background-color: var(--color-diff-line-bg-change-start);
       }
     }
-
-    &--LineOurs {
-      > div {
-        background-color: var(--color-diff-line-bg-conflict-ours);
-      }
-    }
   
-    &--LineConflictFlip {
+    &--DiffChangeFlipLine {
       > div {
         background-color: var(--color-diff-line-bg-change-flip);
       }
     }
-
-    &--LineTheirs {
-      > div {
-        background-color: var(--color-diff-line-bg-conflict-theirs);
-      }
-    }
   
-    &--LineConflictEnd {
+    &--DiffChangeEndLine {
       > div {
         background-color: var(--color-diff-line-bg-change-end);
-      }
-    }
-
-    &--LineNormal {
-      > div {
-        background-color: var(--color-diff-line-bg-context);
       }
     }
 
@@ -263,11 +245,16 @@
 
   &--conflict {
     .diff__grid {
-      grid-template-columns: min-content min-content auto;
+      grid-template-columns: min-content min-content min-content auto;
     }
 
-    .diff__row--yes.diff__row--LineOurs,
-    .diff__row--yes.diff__row--LineTheirs {
+    .diff__hunk-header {
+      grid-column: 1 / span 4;
+    }
+
+    .diff__row--yes.diff__row--DiffAddLine,
+    .diff__row--yes.diff__row--DiffDeleteLine,
+    .diff__row--yes.diff__row--DiffContextLine {
       .diff__line-toggle-minihunk {
         background-color: var(--color-diff-toggle-bg);
         background-size: 80%;
@@ -277,8 +264,9 @@
       }
     }
 
-    .diff__row--no.diff__row--LineOurs,
-    .diff__row--no.diff__row--LineTheirs {
+    .diff__row--no.diff__row--DiffAddLine,
+    .diff__row--no.diff__row--DiffDeleteLine,
+    .diff__row--no.diff__row--DiffContextLine {
       .diff__line-toggle-minihunk {
         background-color: var(--color-diff-toggle-bg-off);
         background-size: 80%;
@@ -288,8 +276,9 @@
       }
     }
 
-    .diff__row--hover.diff__row--LineOurs,
-    .diff__row--hover.diff__row--LineTheirs {
+    .diff__row--hover.diff__row--DiffAddLine,
+    .diff__row--hover.diff__row--DiffDeleteLine,
+    .diff__row--hover.diff__row--DiffContextLine {
       .diff__line-toggle-minihunk {
         background-size: 80%;
         background-position: center;
