--- a/frontend/src/style/_make-commit.scss
+++ b/frontend/src/style/_make-commit.scss
@@ -39,6 +39,9 @@
       width: 100%;
       margin-top: 0.125rem;
       margin-bottom: 0.075rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       &:hover {
         background-color: var(--color-scale-g-5-100);
