--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -12,6 +12,7 @@
 @use "commit-labels";
 @use "commit-details";
 @use "tree";
+@use "repo-state";
 @use "repo-info";
 @use "remotes";
 @use "getting-started";
