--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -1,4 +1,7 @@
 :root {
+  --font-main: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
+  --font-code: FiraCode, monospace;
+
   --color-branch-u-bg: var(--color-scale-a-5-100);
   --color-branch-u-bg2: var(--color-scale-a-8-100);
   --color-branch-u-bg--translucent: var(--color-scale-a-5-50);
