fix: pointer-events none to uncommitted row
maybe do something else later

--- a/frontend/src/style/_commit.scss
+++ b/frontend/src/style/_commit.scss
@@ -33,6 +33,10 @@
       text-overflow: ellipsis;
     }
 
+    .uncommitted & {
+      pointer-events: none;
+    }
+
     &:not(:first-child) {
       .uncommitted & {
         color: var(--color-scale-a-3-100);
