--- a/frontend/src/style/_diffs.scss
+++ b/frontend/src/style/_diffs.scss
@@ -35,6 +35,10 @@
 
 .diff-message {
   padding: 4rem;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: var(--font-main);
   color: var(--color-text-muted);
   @include no-select;
