--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -173,6 +173,7 @@ textarea {
 
   ul {
     visibility: hidden;
+    position: absolute;
     pointer-events: none;
     cursor: pointer;
     list-style: none;
