--- a/frontend/src/style/_settings.scss
+++ b/frontend/src/style/_settings.scss
@@ -6,6 +6,14 @@
 
   h2 {
     margin: 0 0 1rem;
+
+    &:not(:first-of-type) {
+      margin-top: 1rem;
+      padding-top: 2rem;
+      padding-bottom: 1rem;
+      border-top: 1px solid var(--color-scale-a-7-100);
+      border-bottom: 1px solid var(--color-scale-a-7-100);
+    }
   }
 
   h3 {
