--- a/frontend/src/style/_sidebar.scss
+++ b/frontend/src/style/_sidebar.scss
@@ -44,6 +44,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    border-bottom: 1px solid var(--color-btn-border);
   }
 
   .overlay {
@@ -78,12 +79,16 @@
     list-style: none;
     margin: 0;
     padding: 0;
+  }
 
-    li {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: space-between;
+  &__item {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+
+    &--selected {
+      background-color: var(--color-scale-a-5-25);
     }
   }
 }
