--- a/frontend/src/style/_make-commit.scss
+++ b/frontend/src/style/_make-commit.scss
@@ -1,4 +1,14 @@
 .make-commit {
+  --color-btn-bg: var(--color-scale-g-6-100);
+  --color-btn-bg-hover: var(--color-scale-g-5-100);
+  --color-btn-bg-disabled: var(--color-scale-g-8-100);
+
+  &.detached {
+    --color-btn-bg: var(--color-scale-r-8-100);
+    --color-btn-bg-hover: var(--color-scale-r-4-100);
+    --color-btn-bg-disabled: var(--color-scale-r-8-75);
+  }
+
   border-top: 1px solid var(--color-changes-sep);
   background-color: var(--color-changes-bg);
   padding: 0.75rem 1rem 1rem;
@@ -35,33 +45,12 @@
 
   &__button {
     .btn {
-      background-color: var(--color-scale-g-6-100);
       width: 100%;
       margin-top: 0.125rem;
       margin-bottom: 0.075rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-
-      &:hover {
-        background-color: var(--color-scale-g-5-100);
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-g-8-100);
-      }
-
-      .detached & {
-        background-color: var(--color-scale-r-8-100) !important;
-      
-        &:hover {
-          background-color: var(--color-scale-r-7-100) !important;
-        }
-
-        &:disabled {
-          background-color: var(--color-scale-r-8-75) !important;
-        }
-      }
     }
   }
 }
