--- a/frontend/src/style/_repo-state.scss
+++ b/frontend/src/style/_repo-state.scss
@@ -4,31 +4,22 @@
 // any element we wish to directly change, depending on the state
 // of the repo.
 .repo-state {
+  --repo-state-banner-bg: var(--color-scale-r-8-100);
+
   &__banner {
     padding: 0.75rem;
     @include no-select;
-    background-color: var(--color-scale-r-8-100);
+    background-color: var(--repo-state-banner-bg);
   }
 
   // &--RepoStateNone {}
 
   &--RepoStateRebase,
   &--RepoStateRebaseInteractive {
-    .repo-state__banner {
-      background-color: var(--color-scale-p-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-p-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-p-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-p-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-p-8-100);
+    --color-btn-bg-hover: var(--color-scale-p-7-100);
+    --color-btn-bg-disabled: var(--color-scale-p-8-75);
+    --repo-state-banner-bg: var(--color-scale-p-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-p-5-100);
@@ -41,21 +32,10 @@
 
   &--RepoStateMerge,
   &--RepoStateRebaseMerge {
-    .repo-state__banner {
-      background-color: var(--color-scale-n-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-n-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-n-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-n-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-n-8-100);
+    --color-btn-bg-hover: var(--color-scale-n-7-100);
+    --color-btn-bg-disabled: var(--color-scale-n-8-75);
+    --repo-state-banner-bg: var(--color-scale-n-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-n-5-100);
@@ -68,21 +48,10 @@
 
   &--RepoStateApply,
   &--RepoStateApplyOrRebase {
-    .repo-state__banner {
-      background-color: var(--color-scale-p-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-p-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-p-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-p-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-p-8-100);
+    --color-btn-bg-hover: var(--color-scale-p-7-100);
+    --color-btn-bg-disabled: var(--color-scale-p-8-75);
+    --repo-state-banner-bg: var(--color-scale-p-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-p-5-100);
@@ -95,21 +64,10 @@
 
   &--RepoStateRevert,
   &--RepoStateRevertSequence {
-    .repo-state__banner {
-      background-color: var(--color-scale-p-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-p-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-p-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-p-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-p-8-100);
+    --color-btn-bg-hover: var(--color-scale-p-7-100);
+    --color-btn-bg-disabled: var(--color-scale-p-8-75);
+    --repo-state-banner-bg: var(--color-scale-p-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-p-5-100);
@@ -122,21 +80,10 @@
 
   &--RepoStateCherryPick,
   &--RepoStateCherryPickSequence {
-    .repo-state__banner {
-      background-color: var(--color-scale-n-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-n-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-n-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-n-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-n-8-100);
+    --color-btn-bg-hover: var(--color-scale-n-7-100);
+    --color-btn-bg-disabled: var(--color-scale-n-8-75);
+    --repo-state-banner-bg: var(--color-scale-n-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-n-5-100);
@@ -148,21 +95,10 @@
   }
 
   &--RepoStateBisect {
-    .repo-state__banner {
-      background-color: var(--color-scale-o-8-100);
-    }
-
-    &.btn {
-      background-color: var(--color-scale-o-8-100) !important;
-
-      &:hover {
-        background-color: var(--color-scale-o-7-100) !important;
-      }
-
-      &:disabled {
-        background-color: var(--color-scale-o-8-75) !important;
-      }
-    }
+    --color-btn-bg: var(--color-scale-o-8-100);
+    --color-btn-bg-hover: var(--color-scale-o-7-100);
+    --color-btn-bg-disabled: var(--color-scale-o-8-75);
+    --repo-state-banner-bg: var(--color-scale-o-8-100);
 
     &.text-input:focus {
       border-color: var(--color-scale-o-5-100);
