feat: link to commits

--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -162,3 +162,11 @@ code {
     padding: 0 0.25rem;
   }
 }
+
+.linked-commit {
+  &--linkable {
+    color: var(--color-links);
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
