--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -126,7 +126,7 @@
       position: relative;
   
       &--nonewline {
-        span::after {
+        .diff__line-code-contents::after {
           position: relative;
           left: 0.5rem;
           height: 1rem;
