--- a/frontend/src/style/_syntax-highlight.scss
+++ b/frontend/src/style/_syntax-highlight.scss
@@ -1,39 +1,39 @@
 .highlight {
-  .err { color: #d80000 } // Error
-  .k  { color: #66d9ef } // Keyword
-  .kt { color: #f92672 } // KeywordType
-  .kd { color: #f92672 } // KeywordDeclaration
-  .kc { color: #f92672 } // KeywordConstant
-  .kn { color: #66d9ef } // KeywordNamespace
-  .kr { color: #f92672 } // KeywordReserved
-  .n  { color: #a6e22e } // Name
-  .nc { color: #a6e22e } // NameClass
-  .nd { color: #a6e22e } // NameDecorator
-  .nf { color: #a6e22e } // NameFunction
-  .nx { color: #a6e22e } // NameOther
-  .nb { color: #66d9ef } // NameBuiltin
-  .nt { color: #a6e22e } // NameTag
-  .na { color: #66d9ef } // NameAttribute
-  .ni { color: #66d9ef } // NameEntity
-  .nn { color: #a6e22e } // NameNamespace
-  .s  { color: #e6db74 } // String / LiteralString
-  .s1 { color: #e6db74 } // StringSingle
-  .s2 { color: #e6db74 } // StringDouble
-  .sb { color: #e6db74 } // StringBacktick
-  .si { color: #66d9ef } // StringInterpol
-  .o  { color: #e0f8f8 } // Operator
-  .ow { color: #f92672 } // OperatorWord
-  .c  { color: #75715e } // Comment
-  .c1 { color: #7571e3 } // CommentSingle
-  .cp { color: #5e7175 } // CommentPreproc
-  .p  { color: #f8f8f2 } // Punctuation
-  .m  { color: #f92672 } // Number
-  .mb { color: #f92672 } // NumberBin
-  .mf { color: #f92672 } // NumberFloat
-  .mh { color: #f92672 } // NumberHex
-  .mi { color: #f92672 } // NumberInteger
-  .il { color: #f92672 } // NumberIntegerLong
-  .mo { color: #f92672 } // NumberOct
+  .err { color: var(--color-scale-r-4-100) } // Error
+  .k  { color: var(--color-scale-b-2-100) } // Keyword
+  .kt { color: var(--color-scale-o-2-100) } // KeywordType
+  .kd { color: var(--color-scale-n-2-100) } // KeywordDeclaration
+  .kc { color: var(--color-scale-o-2-100) } // KeywordConstant
+  .kn { color: var(--color-scale-n-2-100) } // KeywordNamespace
+  .kr { color: var(--color-scale-b-2-100) } // KeywordReserved
+  .n  { color: var(--color-scale-g-1-100) } // Name
+  .nc { color: var(--color-scale-o-1-100) } // NameClass
+  .nd { color: var(--color-scale-l-1-100) } // NameDecorator
+  .nf { color: var(--color-scale-o-1-100) } // NameFunction
+  .nx { color: var(--color-scale-a-1-100) } // NameOther
+  .nb { color: var(--color-scale-l-1-100) } // NameBuiltin
+  .nt { color: var(--color-scale-g-1-100) } // NameTag
+  .na { color: var(--color-scale-b-1-100) } // NameAttribute
+  .ni { color: var(--color-scale-t-1-100) } // NameEntity
+  .nn { color: var(--color-scale-g-1-100) } // NameNamespace
+  .s  { color: var(--color-scale-p-1-100) } // String / LiteralString
+  .s1 { color: var(--color-scale-p-1-100) } // StringSingle
+  .s2 { color: var(--color-scale-p-1-100) } // StringDouble
+  .sb { color: var(--color-scale-p-1-100) } // StringBacktick
+  .si { color: var(--color-scale-t-1-100) } // StringInterpol
+  .o  { color: var(--color-scale-b-1-100) } // Operator
+  .ow { color: var(--color-scale-o-1-100) } // OperatorWord
+  .c  { color: var(--color-scale-a-3-100) } // Comment
+  .c1 { color: var(--color-scale-a-3-100) } // CommentSingle
+  .cp { color: var(--color-scale-a-3-100) } // CommentPreproc
+  .p  { color: var(--color-scale-a-1-100) } // Punctuation
+  .m  { color: var(--color-scale-o2-3-100) } // Number
+  .mb { color: var(--color-scale-o2-3-100) } // NumberBin
+  .mf { color: var(--color-scale-o2-3-100) } // NumberFloat
+  .mh { color: var(--color-scale-o2-3-100) } // NumberHex
+  .mi { color: var(--color-scale-o2-3-100) } // NumberInteger
+  .il { color: var(--color-scale-o2-3-100) } // NumberIntegerLong
+  .mo { color: var(--color-scale-o2-3-100) } // NumberOct
   .ge { font-style: italic; } // GenericEmph
   .gh { font-weight: bold; } // GenericHeading
   .gp { font-weight: bold; } // GenericPrompt
