refactor: scss organization

--- a/frontend/src/style/modifiers/_repo-state.scss
+++ b/frontend/src/style/modifiers/_repo-state.scss
@@ -1,4 +1,4 @@
-@use "!mixins" as *;
+@use "../mixins" as *;
 
 // Place this modifier class, e.g. `repo-state--{$repoState}`, on
 // any element we wish to directly change, depending on the state
