--- a/frontend/src/style/components/_settings.scss
+++ b/frontend/src/style/components/_settings.scss
@@ -3,6 +3,8 @@
 .settings {
   text-align: left;
   padding: 2rem;
+  overflow-y: auto;
+  height: 100%;
 
   h2 {
     margin: 0 0 1rem;
@@ -28,12 +30,44 @@
     &:not(:first-of-type) {
       margin-top: 1rem;
     }
+
+    &--split {
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+    }
+
+    &__split {
+      flex: 1;
+    }
   
     &__name {
       margin: 0.5rem 0;
       color: var(--color-text-muted);
       font-weight: normal;
       @include no-select;
+    }
+
+    .text-input {
+      margin: 0.5rem 0;
+
+      input[type="text"] {
+        width: 100%;
+      }
+    }
+
+    .checkbox {
+      margin-top: 1rem;
+    }
+
+    .override {
+      &.overridden {
+        opacity: 0.7;
+      }
+
+      &.empty {
+        opacity: 0.7;
+      }
     }
   }
 }
