--- a/frontend/src/style/components/_settings.scss
+++ b/frontend/src/style/components/_settings.scss
@@ -8,6 +8,7 @@
 
   h2 {
     margin: 0 0 1rem;
+    @include no-select;
 
     &:not(:first-of-type) {
       margin-top: 1rem;
@@ -22,6 +23,7 @@
     margin: 1rem 0 0;
     padding: 0.5rem 0 0;
     border-top: 1px solid var(--color-scale-a-7-100);
+    @include no-select;
   }
 
   .setting {
@@ -62,11 +64,15 @@
 
     .override {
       &.overridden {
-        opacity: 0.7;
+        input[type="text"] {
+          opacity: 0.7;
+        }
       }
 
       &.empty {
-        opacity: 0.7;
+        input[type="text"] {
+          opacity: 0.7;
+        }
       }
     }
   }
