feat: `Info` component tooltips

--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -25,6 +25,7 @@
 @use "components/code-breakdown";
 @use "components/diffs";
 @use "components/diff";
+@use "components/info";
 
 @use "modifiers/repo-state";
 @use "modifiers/conventional-commits";
