--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -220,7 +220,7 @@ textarea {
 .file-input {
   display: block;
 
-  span {
+  &__display {
     display: block;
     padding: 0 0 0.25rem 0;
     color: var(--color-text-muted);
