--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -15,6 +15,8 @@
 @use "components/commit";
 @use "components/commit-labels";
 @use "components/commit-details";
+@use "components/commit-file-changes";
+@use "components/gpg-status";
 @use "components/tree";
 @use "components/repo-info";
 @use "components/remotes";
