--- a/frontend/src/style/components/_gpg-status.scss
+++ b/frontend/src/style/components/_gpg-status.scss
@@ -1,45 +1,83 @@
 .gpg-status {
-  svg {
-    margin: 2px 0 -3px;
+  --gpg-icon-color: var(--color-text-muted);
+  display: inline-block;
+  position: relative;
+
+  &__tip {
+    display: none;
+    z-index: 10000;
+    position: absolute;
+    bottom: 1rem;
+    left: -2rem;
+
+    &:hover {
+      display: block;
+    }
+  }
+
+  &__text {
+    display: block;
+    font-size: 1rem;
+    border: 1px solid var(--color-scale-a-8-100);
+    background-color: var(--color-scale-a-7-100);
+    padding: 0.75rem 1rem;
+    margin: 0.75rem;
+    min-width: 12rem;
+    max-width: 25rem;
+    box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0 0 0 / 20%);
+  }
+
+  &__icon {
+    display: inline-block;
+    fill: var(--gpg-icon-color);
+    margin-right: 0.2rem;
+    position: relative;
+    top: 0.15rem;
+
+    &:hover {
+      + .gpg-status__tip {
+        display: block;
+      }
+    }
   }
 
   &--G {
     // Good
-    fill: var(--color-scale-g-4-100);
+    --gpg-icon-color: var(--color-scale-g-4-100);
   }
 
   &--B {
     // Bad
-    fill: var(--color-scale-r-4-100);
+    --gpg-icon-color: var(--color-scale-r-4-100);
   }
 
   &--U {
     // Good signature, unknown validity
-    fill: var(--color-scale-l-4-100);
+    --gpg-icon-color: var(--color-scale-l-4-100);
   }
 
   &--E {
     // Missing key, unable to verify
-    fill: var(--color-scale-y-4-100);
+    --gpg-icon-color: var(--color-scale-y-4-100);
   }
 
   &--X {
     // Good signature, expired
-    fill: var(--color-scale-y-4-100);
+    --gpg-icon-color: var(--color-scale-y-4-100);
   }
 
   &--Y {
     // Good signature, expired key
-    fill: var(--color-scale-y-4-100);
+    --gpg-icon-color: var(--color-scale-y-4-100);
   }
 
   &--R {
     // Good signature, revoked key
-    fill: var(--color-scale-o-4-100);
+    --gpg-icon-color: var(--color-scale-o-4-100);
   }
 
   &--N {
     // No signature
-    fill: var(--color-scale-a-6-100);
+    --gpg-icon-color: var(--color-scale-a-6-100);
   }
 }
