--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -23,6 +23,7 @@
 @use "components/getting-started";
 @use "components/settings";
 @use "components/make-commit";
+@use "components/rebase-actions";
 @use "components/details";
 @use "components/code-breakdown";
 @use "components/diffs";
