feat: delete or keep file when ours/theirs is delete

--- a/frontend/src/style/variables/_variables.scss
+++ b/frontend/src/style/variables/_variables.scss
@@ -66,6 +66,10 @@
   --color-btn-bg-green-disabled: var(--color-scale-g-7-50);
   --color-btn-bg-green-hover: var(--color-scale-g-5-100);
 
+  --color-btn-bg-red: var(--color-scale-r-7-100);
+  --color-btn-bg-red-disabled: var(--color-scale-r-8-50);
+  --color-btn-bg-red-hover: var(--color-scale-r-6-100);
+
   --color-context-bg: var(--color-scale-a-7-100);
   --color-context-bg-hover: var(--color-scale-a-6-100);
   --color-context-border: var(--color-scale-a-6-100);
