--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -65,6 +65,20 @@
     }
   }
 
+  &--delete {
+    background-color: var(--color-btn-bg-red);
+
+    &:disabled {
+      color: var(--color-text-muted);
+      fill: var(--color-text-muted);
+      background-color: var(--color-btn-bg-disabled);
+    }
+  
+    &:hover:not(:disabled) {
+      background-color: var(--color-btn-bg-red-hover);
+    }
+  }
+
   // An !important override for buttons that would otherwise become a different color based on state.
   &--green {
     background-color: var(--color-btn-bg-green) !important;
