--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -11,6 +11,18 @@
   border-radius: 0.25rem;
   @include no-select;
 
+  &--icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    .icon {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
   & + & {
     margin-left: 0.25rem;
   }
