--- a/frontend/src/style/components/_sidebar.scss
+++ b/frontend/src/style/components/_sidebar.scss
@@ -96,20 +96,19 @@
 .sidebar-remote-actions {
   background-color: var(--color-changes-bg);
   padding: 0.5rem 1rem;
-
   display: flex;
 
   .btn {
     flex: 1;
     font-size: 0.9rem;
-    padding: 0.25rem 0.75rem;
+    padding: 0.4rem 0.75rem;
 
     .icon {
       pointer-events: none;
     }
 
     svg {
-      margin: -0.1rem 0.2rem 0 -0.5rem;
+      margin: 0 0.2rem 0 -0.5rem;
     }
   }
 }
