--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -1,3 +1,5 @@
+@use "mixins" as *;
+
 @font-face {
   font-family: "FiraCode";
   font-style: normal;
@@ -37,7 +39,8 @@ table {
 a {
   color: var(--color-links);
   text-decoration: none;
-  cursor: pointer;
+  cursor: pointer !important;
+  pointer-events: all !important;
 }
 
 #app {
